one correction made in index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 fitness as a hobby. Give me an hour of your time, and I'll make sure you sweat! <br>
                 As a gal who hails from the Pacific Northwest, I have found a real fondess for the dry heat of the
                 Sonoran Desert. Tucson has become an easy place for me to call home. Give me all the stunning sunsets,
-                stately saguaro, and spicy salsa. I'm also a sucker for a good illeratation.</p>
+                stately saguaro, and spicy salsa. I'm also a sucker for a good alliteration.</p>
             </p>
 
         </section>
